@@ -16,6 +16,7 @@ Changelog
 - Add support for contact lookup by email2 using Solr. [buchi]
 - Fix title format in OGDS UsersContactsInboxesSource using Solr. [buchi]
 - Fix bug in table source of trashed documents when using solr. [njohner]
+- Fix bug in search view not respecting batch size when solr is deactivated and change default batch size with Solr to 25. [njohner]
 - Extend the ftw.mail.mail workflow with teamraum specific roles. [elioschmutz]
 - Extend the `meeting.json`, which will be generated for an exported meeting, with a `agenda_item_list` property which contains a link to the agenda item list document. [elioschmutz]
 - Add @allowed-roles-and-principals API endpoint (callable on every context) to get the information which roles, groups or users are allowed to view an object. [tinagerber]
